src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  margin: 0;
  padding: 0;
  font-family: 'Mulish', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.mistake-highlight {
  position: relative;
  display: inline-block;
}

.mistake-highlight::before {
  content: "";
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;

  background-color: rgb(252 165 165);
}

a:hover {
  opacity: 0.7;
}

@layer components {
  .markdown-copy h1 {
    @apply text-3xl font-bold mb-8;
  }

  .markdown-copy h2 {
    @apply text-2xl font-bold mb-3 mt-8;
  }

  .markdown-copy ol {
    @apply list-decimal mb-4 list-inside;
  }

  .markdown-copy ul {
    @apply mb-4 list-inside;
  }

  .markdown-copy p {
    @apply text-lg inline-block leading-10;
  }

  .markdown-copy p:not(:last-child) {
    @apply mb-4;
  }

  .markdown-copy li {
    @apply text-lg;
  }

  .markdown-copy li:not(:last-child) {
    @apply mb-2;
  }

  .markdown-copy a {
    @apply underline;
  }

  .corrected-sentence span {
    @apply text-lg;
  }

  button:disabled {
    @apply bg-indigo-400;
  }

  button:disabled:hover {
    @apply bg-indigo-400;
  }
}

.tooltip-arrow {
  position: absolute;
  top: 0;
  left: 50%;
  transform: translateX(-100%) translateY(-100%);
  width: 0;
  height: 0;
}

.tooltip {
  display: none;
}

.tooltip-wrapper:hover .tooltip {
  display: inline-block;
}

.emoji {
  display: inline-block;
  width: auto;
  height: 1em;
  vertical-align: -0.125em;
}

